--- a/Authorization.Core/Authorization.Core.csproj
+++ b/Authorization.Core/Authorization.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -11,6 +11,7 @@
     <AssemblyName>Fricke.Authorization.Core</AssemblyName>
     <Version>1.0.0</Version>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <RepositoryUrl>https://github.com/CRFricke/Authorization.Core</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
