--- a/Authorization.Core/Authorization.Core.csproj
+++ b/Authorization.Core/Authorization.Core.csproj
@@ -3,21 +3,36 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <RootNamespace>Fricke.Authorization.Core</RootNamespace>
+    <AssemblyName>Fricke.Authorization.Core</AssemblyName>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <Description>Extends ASP.NET Core Identity to provide authorization based on entity CRUD permission claims (e.g. "User.Create", "User.Read", "User.Update", "User.Delete", and "User.List").</Description>
     <Authors>Chuck Fricke</Authors>
     <Company>Fricke Consulting</Company>
     <PackageTags>aspnetcore, identity, membership, authorization</PackageTags>
-    <RootNamespace>Fricke.Authorization.Core</RootNamespace>
-    <AssemblyName>Fricke.Authorization.Core</AssemblyName>
-    <Version>1.0.0</Version>
-    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
-    <RepositoryUrl>https://github.com/CRFricke/Authorization.Core</RepositoryUrl>
+    <Version>1.0.0-beta2</Version>
+    <PackageProjectUrl>https://github.com/CRFricke/Authorization.Core</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <Copyright>Copyright © Chuck Fricke 2021</Copyright>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\Assets\icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.21" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.21" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
