--- a/Test.Fakes/Test.Fakes.csproj
+++ b/Test.Fakes/Test.Fakes.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <LangVersion>9.0</LangVersion>
     <RootNamespace>Fricke.Test.Fakes</RootNamespace>
     <AssemblyName>Fricke.Test.Fakes</AssemblyName>
 	<Nullable>enable</Nullable>
