--- a/Test.Fakes/Test.Fakes.csproj
+++ b/Test.Fakes/Test.Fakes.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>9.0</LangVersion>
-    <RootNamespace>Fricke.Test.Fakes</RootNamespace>
-    <AssemblyName>Fricke.Test.Fakes</AssemblyName>
+    <RootNamespace>CRFricke.Test.Fakes</RootNamespace>
+    <AssemblyName>CRFricke.Test.Fakes</AssemblyName>
 	<Nullable>enable</Nullable>
   </PropertyGroup>
 
