--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,15 +14,22 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: |
           3.1.x
-          5.0.x
+          6.0.x
+
+    - name: Add GitHub package source
+      run: dotnet nuget add source https://nuget.pkg.github.com/CRFricke/index.json -n github.com -u CRFricke -p ${{ secrets.GITHUB_TOKEN }}
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
