--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
           6.0.x
 
     - name: Add GitHub package source
-      run: dotnet nuget add source https://nuget.pkg.github.com/CRFricke/index.json -n github.com -u CRFricke -p ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet nuget add source https://nuget.pkg.github.com/CRFricke/index.json -n github.com -u CRFricke -p ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
 
     - name: Restore dependencies
       run: dotnet restore
