--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,10 +20,10 @@ jobs:
       with:
         dotnet-version: |
           3.1.x
-          6.0.x
-
-    - name: Add GitHub package source
-      run: dotnet nuget add source https://nuget.pkg.github.com/CRFricke/index.json -n github.com -u CRFricke -p ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
+          5.0.x
+        source-url: https://nuget.pkg.github.com/CRFricke/index.json
+      env:
+          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
     - name: Restore dependencies
       run: dotnet restore
