--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,7 @@ jobs:
           3.1.x
           5.0.x
         source-url: https://nuget.pkg.github.com/CRFricke/index.json
+        owner: CRFricke
       env:
           NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
