--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,6 +11,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+       packages: read
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -24,7 +27,7 @@ jobs:
         source-url: https://nuget.pkg.github.com/CRFricke/index.json
         owner: CRFricke
       env:
-          NUGET_AUTH_TOKEN: ${{secrets.USER_PAT}}
+          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
     - name: Restore dependencies
       run: dotnet restore
