--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,15 +14,23 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: |
           3.1.x
           5.0.x
+        source-url: https://nuget.pkg.github.com/CRFricke/index.json
+        owner: CRFricke
+      env:
+          NUGET_AUTH_TOKEN: ${{secrets.USER_PAT}}
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
