--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,19 +1,37 @@
 name: .NET
 
+env:
+    VER_MAJOR_DEFAULT: 1
+    VER_MINOR_DEFAULT: 0
+    VER_PATCH_DEFAULT: 0
+
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ '**' ]
+    tags: ['v*']
 
 jobs:
   build:
+
+    env:
+      BUILD_CONFIG: 'Release'
 
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Get Build Version
+      shell: pwsh
+      run: |
+        Import-Module .\build\ActionModule.psm1
+        Get-VersionVariables $env:GITHUB_REF
+        $Version = "$Tag_Major.$Tag_Minor.$Tag_Patch"
+        if ($Tag_PreRelease) { $Version += "-$Tag_PreRelease" }
+        if ($Tag_Build) { $Version += "+$Tag_Build" }
+        Set-ActionVariable "BUILD_VERSION" "$Version"
+        Write-Host "BUILD_VERSION: $Version"
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
@@ -30,7 +48,19 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore /p:Version=$BUILD_VERSION
 
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
+    - name: Create NuGet package
+      if: ${{github.ref_type == 'tag'}}
+      run: dotnet pack Authorization.Core.NoTests.slnf --configuration $BUILD_CONFIG --nobuild --output nuget
+
+    - name: Upload NuGet packages
+      if: ${{github.ref_type == 'tag'}}
+      run: dotnet nuget push "nuget/*.nupkg" --skip-duplicate --source https://nuget.pkg.github.com/CRFricke/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload NuGet Symbol packages
+      if: ${{github.ref_type == 'tag'}}
+      run: dotnet nuget push "nuget/*.snupkg" --skip-duplicate --source https://nuget.pkg.github.com/CRFricke/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
