--- a/Authorization.Core/Authorization.Core.csproj
+++ b/Authorization.Core/Authorization.Core.csproj
@@ -18,6 +18,15 @@
     <PackageProjectUrl>https://github.com/CRFricke/Authorization.Core</PackageProjectUrl>
     <PackageTags>aspnetcore, identity, membership, authorization</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
+  </PropertyGroup>
+
+  <!-- For 'push' workflow, we embed the symbol package in the DLL and push the nupkg to github.com -->
+  <PropertyGroup Condition="'$(GITHUB_EVENT_NAME)' == 'push'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <!-- For 'release' workflow, we create a separate symbol package and push both to nuget.org -->
+  <PropertyGroup Condition="'$(GITHUB_EVENT_NAME)' == 'release'">
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
