Added virtual SeedDatabase() method to each DbContext (allows each component to verify their seed data during application startup).
Renamed AppDbContext, AppRole, and AppUser classes in the Core.UI project to AuthUiContext, AuthUiRole, and AuthUiUser respectively.

--- a/Authorization.Core.Tests/Authorization.Core.Tests.csproj
+++ b/Authorization.Core.Tests/Authorization.Core.Tests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Authorization.Core.UI\Authorization.Core.UI.csproj" />
     <ProjectReference Include="..\Authorization.Core\Authorization.Core.csproj" />
   </ItemGroup>
 
