- Add CRFricke.EF.Core.Utilities package to handle database initialization. - No longer specify DbContext in AddAccessRightBasedAuthorization extension method (use value configured in AddEntityFrameworkStores extension method instead). - Add ApplicationRole and ApplicationUser classes to Web project. - Update documentation.

--- a/Authorization.Core/Authorization.Core.csproj
+++ b/Authorization.Core/Authorization.Core.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CRFricke.EF.Core.Utilities" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.22" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.22" />
