--- a/.gitignore
+++ b/.gitignore
@@ -361,4 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/Authorization.Core.UI.Test.Web/Test.Web.db
+/Authorization.Core.UI.Test.Web/Test.Web.db*
