--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -66,3 +66,10 @@ jobs:
     - name: Upload packages to NuGet.org
       if: ${{github.event_name == 'release'}}
       run: dotnet nuget push "**/*.nupkg" --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
+
+    - name: Dump Environment Variables
+      run: |
+        Enter-ActionOutputGroup "Environment Variables"
+        Write-Output (Get-ChildItem -Path Env:\)
+        Exit-ActionOutputGroup
+      shell: pwsh
