--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,9 +1,8 @@
-name: .NET
+name: Tag
 
 on:
   push:
-    branches: [ '**' ]
-    paths-ignore: ['**/*.md']
+    tags: ['v*']
 
 jobs:
   build:
@@ -50,3 +49,20 @@ jobs:
 
     - name: Test
       run: dotnet test --configuration $BUILD_CONFIG --no-build --verbosity normal
+
+    - name: Create Authorization.Core NuGet package
+      run: dotnet pack **/Authorization.Core.csproj --configuration $BUILD_CONFIG --no-build /p:Version=$BUILD_VERSION
+
+    - name: Upload Authorization.Core NuGet package to GitHub
+      run: dotnet nuget push "**/CRFricke.Authorization.Core.*.nupkg" --skip-duplicate --source https://nuget.pkg.github.com/CRFricke/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Update Authorization.Core References
+      run: |
+        dotnet remove **/Authorization.Core.UI.csproj reference **/Authorization.Core.csproj
+        dotnet add **/Authorization.Core.UI.csproj package CRFricke.Authorization.Core --version $BUILD_VERSION --source https://nuget.pkg.github.com/CRFricke/index.json
+
+    - name: Create Authorization.Core.UI NuGet package
+      run: dotnet pack **/Authorization.Core.UI.csproj --configuration $BUILD_CONFIG --no-build /p:Version=$BUILD_VERSION
+
+    - name: Upload Authorization.Core.UI NuGet package to GitHub
+      run: dotnet nuget push "**/CRFricke.Authorization.Core.UI.*.nupkg" --skip-duplicate --source https://nuget.pkg.github.com/CRFricke/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
