* Move inline styles to separate CSS Isolation code-behind files. * Ensure submit buttons at bottom of page below d-xs breakpoint. * Remove unnecessary HTML attributes when displaying Delete & Details pages. * Update associated tests.

--- a/Authorization.Core.UI/Authorization.Core.UI.csproj
+++ b/Authorization.Core.UI/Authorization.Core.UI.csproj
@@ -44,6 +44,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Areas\Authorization\Pages\V5\Role\*.cshtml.css" CssScope="b-role-mgmt" />
+    <None Update="Areas\Authorization\Pages\V5\User\*.cshtml.css" CssScope="b-user-mgmt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
