Update workflow for v1.0.4 update to CRFricke/Setup-PowerShell and Get-VersionVariables.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,26 +10,22 @@ jobs:
 
     env:
       BUILD_CONFIG: 'Release'
-      VERSION_DEFAULT: '6.0.3'
 
     runs-on: ubuntu-latest
 
     steps:
     - name: Setup PowerShell
-      uses: CRFricke/Setup-PowerShell@v1.0.1
+      uses: CRFricke/Setup-PowerShell@v1.0.4
+
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Get Build Version
       shell: pwsh
       run: |
-        Get-VersionVariables $env:GITHUB_REF
-        $Version = "$Tag_Major.$Tag_Minor.$Tag_Patch"
-        if ($Tag_PreRelease) { $Version += "-$Tag_PreRelease" }
-        if ($Tag_Build) { $Version += "+$Tag_Build" }
-        Set-ActionVariable "BUILD_VERSION" "$Version"
-        Write-Host "BUILD_VERSION: $Version"
-
-    - name: Checkout
-      uses: actions/checkout@v2
+        Get-VersionVariables
+        Set-ActionVariable "BUILD_VERSION" "$Tag_Version"
+        Write-Host "BUILD_VERSION: $Tag_Version"
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
