--- a/Authorization.Core.UI/buildMultiTargeting/CRFricke.Authorization.Core.UI.targets
+++ b/Authorization.Core.UI/buildMultiTargeting/CRFricke.Authorization.Core.UI.targets
@@ -1,3 +1,3 @@
 <Project>
-  <Import Project="$(MSBuildThisFileDirectory)..\buildTransitive\Microsoft.AspNetCore.Identity.UI.targets"/>
+  <Import Project="$(MSBuildThisFileDirectory)..\buildTransitive\CRFricke.Authorization.Core.UI.targets"/>
 </Project>
