--- a/Authorization.Core.UI/buildTransitive/CRFricke.Authorization.Core.UI.targets
+++ b/Authorization.Core.UI/buildTransitive/CRFricke.Authorization.Core.UI.targets
@@ -1,3 +1,3 @@
 <Project>
-  <Import Project="$(MSBuildThisFileDirectory)..\build\Microsoft.AspNetCore.Identity.UI.targets"/>
+  <Import Project="$(MSBuildThisFileDirectory)..\build\CRFricke.Authorization.Core.UI.targets"/>
 </Project>
