--- a/Authorization.Core.UI/Authorization.Core.UI.csproj
+++ b/Authorization.Core.UI/Authorization.Core.UI.csproj
@@ -10,7 +10,7 @@
   <PropertyGroup>
     <Authors>Chuck Fricke</Authors>
     <Company>Fricke Consulting</Company>
-    <Copyright>Copyright © Chuck Fricke 2021</Copyright>
+    <Copyright>Copyright © Chuck Fricke $([System.DateTime]::Now.ToString(yyyy))</Copyright>
     <Description>Extends ASP.NET Core Identity to include a UI for management of Users and Roles.</Description>
     <RazorAssemblyDescription>Compiled Razor views assembly for the CRFricke.Authorization.Core.UI package.</RazorAssemblyDescription>
     <PackageIcon>icon.png</PackageIcon>
@@ -55,8 +55,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.10" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
