--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -10,7 +10,7 @@ jobs:
     env:
       BUILD_CONFIG: 'Release'
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Setup PowerShell
@@ -42,24 +42,24 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --configuration $BUILD_CONFIG --no-restore /p:Version=$BUILD_VERSION
+      run: dotnet build --configuration $env:BUILD_CONFIG --no-restore /p:Version=$env:BUILD_VERSION
 
     - name: Test
-      run: dotnet test --configuration $BUILD_CONFIG --no-build --verbosity normal
+      run: dotnet test --configuration $env:BUILD_CONFIG --no-build --verbosity normal
 
     - name: Create Authorization.Core NuGet package
-      run: dotnet pack **/Authorization.Core.csproj --configuration $BUILD_CONFIG --no-build /p:Version=$BUILD_VERSION
+      run: dotnet pack **\Authorization.Core.csproj --configuration $env:BUILD_CONFIG --no-build /p:Version=$env:BUILD_VERSION
 
     - name: Upload Authorization.Core NuGet package to GitHub
-      run: dotnet nuget push "**/CRFricke.Authorization.Core.*.nupkg" --source https://nuget.pkg.github.com/CRFricke/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet nuget push "**\CRFricke.Authorization.Core.*.nupkg" --source https://nuget.pkg.github.com/CRFricke/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
 
     - name: Update Authorization.Core References
       run: |
-        dotnet remove **/Authorization.Core.UI.csproj reference **/Authorization.Core.csproj
-        dotnet add **/Authorization.Core.UI.csproj package CRFricke.Authorization.Core --version $BUILD_VERSION --source https://nuget.pkg.github.com/CRFricke/index.json
+        dotnet remove **\Authorization.Core.UI.csproj reference **\Authorization.Core.csproj
+        dotnet add **\Authorization.Core.UI.csproj package CRFricke.Authorization.Core --version $env:BUILD_VERSION --source https://nuget.pkg.github.com/CRFricke/index.json
 
     - name: Create Authorization.Core.UI NuGet package
-      run: dotnet pack **/Authorization.Core.UI.csproj --configuration $BUILD_CONFIG --no-build /p:Version=$BUILD_VERSION
+      run: dotnet pack **\Authorization.Core.UI.csproj --configuration $env:BUILD_CONFIG --no-build /p:Version=$env:BUILD_VERSION
 
     - name: Upload Authorization.Core.UI NuGet package to GitHub
-      run: dotnet nuget push "**/CRFricke.Authorization.Core.UI.*.nupkg" --source https://nuget.pkg.github.com/CRFricke/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet nuget push "**\CRFricke.Authorization.Core.UI.*.nupkg" --source https://nuget.pkg.github.com/CRFricke/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
